--- a/index.html
+++ b/index.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webstudio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@400;700&family=Roboto+Condensed:wght@600family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
-      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <header class="header">
@@ -27,7 +18,8 @@
             >Web<span class="logo-blu">Studio</span></a
           >
           <ul class="nav-list">
-            <li><a href="./index.html" class="nav-header">Studio</a></li>
+            <li><a href="./index.html" class="nav-header current">Studio</a>
+            </li>
             <li><a href="" class="nav-header">Portfolio</a></li>
             <li><a href="" class="nav-header">Contacts</a></li>
           </ul>
@@ -66,28 +58,44 @@
           <h2 class="visually-hidden">About</h2>
           <ul class="section-two-list">
             <li class="section-two-list-item">
-              <h3 class="section-header-three">Strategy</h3>
+              <svg class="icons" width="64" height="64">
+                <use href="./images/icons_opt.svg#icon-antenna-1">
+                </use>
+              </svg>
+              <h3 class="s-header-three">Strategy</h3>
               <p class="section-two-p">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li class="section-two-list-item">
-              <h3 class="section-header-three">Punctuality</h3>
+              <svg class="icons" width="64" height="64">
+                <use href="./images/icons_opt.svg#icon-clock-1">
+                </use>
+              </svg>
+              <h3 class="s-header-three">Punctuality</h3>
               <p class="section-two-p">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="section-two-list-item">
-              <h3 class="section-header-three">Diligence</h3>
+              <svg class="icons" width="64" height="64">
+                <use href="./images/icons_opt.svg#icon-Vector">
+                </use>
+              </svg>
+              <h3 class="s-header-three">Diligence</h3>
               <p class="section-two-p">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="section-two-list-item">
-              <h3 class="section-header-three">Technologies</h3>
+              <svg class="icons" width="64" height="64">
+                <use href="./images/icons_opt.svg#icon-astronaut-1">
+                </use>
+              </svg>
+              <h3 class="s-header-three">Technologies</h3>
               <p class="section-two-p">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -102,31 +110,151 @@
           <h2 class="section-three-title">Our Team</h2>
           <ul class="s-three-list">
             <li class="s-three-list-item">
-              <img src="./images/img.jpg" width="264" alt="Mark Guerrero" />
+              <img src="./images/img.jpg" width="264" alt="Mark Guerrero">
               <div class="worker-info">
                 <h3 class="section-header-three">Mark Guerrero</h3>
                 <p class="section-three-p">Product Designer</p>
+                <ul class="icon-list">
+                  <li>
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon">
+                        <use href="./images/icons_opt.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon">
+                        <use href="./images/icons_opt.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon">
+                        <use href="./images/icons_opt.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon">
+                        <use href="./images/icons_opt.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="s-three-list-item">
-              <img src="./images/img(1).jpg" width="264" alt="Tom Ford" />
+              <img src="./images/img(1).jpg" width="264" alt="Tom Ford">
               <div class="worker-info">
                 <h3 class="section-header-three">Tom Ford</h3>
                 <p class="section-three-p">Frontend Developer</p>
+                <ul class="icon-list">
+                  <li>
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon">
+                        <use href="./images/icons_opt.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon">
+                        <use href="./images/icons_opt.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon">
+                        <use href="./images/icons_opt.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon">
+                        <use href="./images/icons_opt.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="s-three-list-item">
-              <img src="./images/img(2).jpg" width="264" alt="Camila Garcia" />
+              <img src="./images/img(2).jpg" width="264" alt="Camila Garcia">
               <div class="worker-info">
                 <h3 class="section-header-three">Camila Garcia</h3>
                 <p class="section-three-p">Marketing</p>
+                <ul class="icon-list">
+                  <li>
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon">
+                        <use href="./images/icons_opt.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon">
+                        <use href="./images/icons_opt.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon">
+                        <use href="./images/icons_opt.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon">
+                        <use href="./images/icons_opt.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="s-three-list-item">
-              <img src="./images/img(3).jpg" width="264" alt="Daniel Wilson" />
+              <img src="./images/img(3).jpg" width="264" alt="Daniel Wilson">
               <div class="worker-info">
                 <h3 class="section-header-three">Daniel Wilson</h3>
                 <p class="section-three-p">UI Designer</p>
+                <ul class="icon-list">
+                  <li>
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon">
+                        <use href="./images/icons_opt.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon">
+                        <use href="./images/icons_opt.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon">
+                        <use href="./images/icons_opt.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="" class="icon-link">
+                      <svg class="icon-icon">
+                        <use href="./images/icons_opt.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -142,8 +270,7 @@
                 src="./images/bank.jpg"
                 width="360"
                 height="300"
-                alt="Banking App"
-              />
+                alt="Banking App">
               <div class="portfolio-info">
                 <h3 class="section-four-h">Banking App</h3>
                 <p class="section-four-p">App</p>
@@ -154,8 +281,7 @@
                 src="./images/paym.jpg"
                 width="360"
                 height="300"
-                alt="Cashless Payment"
-              />
+                alt="Cashless Payment">
               <div class="portfolio-info">
                 <h3 class="section-four-h">Cashless Payment</h3>
                 <p class="section-four-p">Marketing</p>
@@ -166,8 +292,7 @@
                 src="./images/med.jpg"
                 width="360"
                 height="300"
-                alt="Meditation App"
-              />
+                alt="Meditation App">
               <div class="portfolio-info">
                 <h3 class="section-four-h">Meditation App</h3>
                 <p class="section-four-p">App</p>
@@ -178,8 +303,7 @@
                 src="./images/taxi.jpg"
                 width="360"
                 height="300"
-                alt="Taxi service"
-              />
+                alt="Taxi service">
               <div class="portfolio-info">
                 <h3 class="section-four-h">Taxi Service</h3>
                 <p class="section-four-p">Marketing</p>
@@ -190,8 +314,7 @@
                 src="./images/screen-illu.jpg"
                 width="360"
                 height="300"
-                alt="Screen Illustrations"
-              />
+                alt="Screen Illustrations">
               <div class="portfolio-info">
                 <h3 class="section-four-h">Screen Illustrations</h3>
                 <p class="section-four-p">Design</p>
@@ -202,8 +325,7 @@
                 src="./images/onlinecours.jpg"
                 width="360"
                 height="300"
-                alt="Online Courses"
-              />
+                alt="Online Courses">
               <div class="portfolio-info">
                 <h3 class="section-four-h">Online Courses</h3>
                 <p class="section-four-p">Marketing</p>
@@ -222,6 +344,41 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div class="social">
+        <p class="social-text">
+                Social media
+        </p>
+        <ul class="icon-list">
+          <li>
+            <a href="" class="icon-link">
+              <svg class="icon-icon">
+                <use href="./images/icons_opt.svg#icon-instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="icon-link">
+              <svg class="icon-icon">
+                <use href="./images/icons_opt.svg#icon-twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="icon-link">
+              <svg class="icon-icon">
+                <use href="./images/icons_opt.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="icon-link">
+              <svg class="icon-icon">
+                <use href="./images/icons_opt.svg#icon-linkedin-1"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
