--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <ul class="section-two-list">
             <li class="section-two-list-item">
               <svg class="icons" width="64" height="64">
-                <use href="./images/icons_opt.svg#icon-antenna-1">
+                <use href="./images/icons.svg#icon-antenna-1">
                 </use>
               </svg>
               <h3 class="s-header-three">Strategy</h3>
@@ -70,7 +70,7 @@
             </li>
             <li class="section-two-list-item">
               <svg class="icons" width="64" height="64">
-                <use href="./images/icons_opt.svg#icon-clock-1">
+                <use href="./images/icons.svg#icon-clock-1">
                 </use>
               </svg>
               <h3 class="s-header-three">Punctuality</h3>
@@ -81,7 +81,7 @@
             </li>
             <li class="section-two-list-item">
               <svg class="icons" width="64" height="64">
-                <use href="./images/icons_opt.svg#icon-Vector">
+                <use href="./images/icons.svg#icon-Vector">
                 </use>
               </svg>
               <h3 class="s-header-three">Diligence</h3>
@@ -92,7 +92,7 @@
             </li>
             <li class="section-two-list-item">
               <svg class="icons" width="64" height="64">
-                <use href="./images/icons_opt.svg#icon-astronaut-1">
+                <use href="./images/icons.svg#icon-astronaut-1">
                 </use>
               </svg>
               <h3 class="s-header-three">Technologies</h3>
@@ -118,28 +118,28 @@
                   <li>
                     <a href="" class="icon-link">
                       <svg class="icon-icon">
-                        <use href="./images/icons_opt.svg#icon-instagram-2"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon-link">
                       <svg class="icon-icon">
-                        <use href="./images/icons_opt.svg#icon-twitter-1"></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon-link">
                       <svg class="icon-icon">
-                        <use href="./images/icons_opt.svg#icon-facebook-1"></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon-link">
                       <svg class="icon-icon">
-                        <use href="./images/icons_opt.svg#icon-linkedin-1"></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -155,28 +155,28 @@
                   <li>
                     <a href="" class="icon-link">
                       <svg class="icon-icon">
-                        <use href="./images/icons_opt.svg#icon-instagram-2"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon-link">
                       <svg class="icon-icon">
-                        <use href="./images/icons_opt.svg#icon-twitter-1"></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon-link">
                       <svg class="icon-icon">
-                        <use href="./images/icons_opt.svg#icon-facebook-1"></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon-link">
                       <svg class="icon-icon">
-                        <use href="./images/icons_opt.svg#icon-linkedin-1"></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -192,28 +192,28 @@
                   <li>
                     <a href="" class="icon-link">
                       <svg class="icon-icon">
-                        <use href="./images/icons_opt.svg#icon-instagram-2"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon-link">
                       <svg class="icon-icon">
-                        <use href="./images/icons_opt.svg#icon-twitter-1"></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon-link">
                       <svg class="icon-icon">
-                        <use href="./images/icons_opt.svg#icon-facebook-1"></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon-link">
                       <svg class="icon-icon">
-                        <use href="./images/icons_opt.svg#icon-linkedin-1"></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -229,28 +229,28 @@
                   <li>
                     <a href="" class="icon-link">
                       <svg class="icon-icon">
-                        <use href="./images/icons_opt.svg#icon-instagram-2"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon-link">
                       <svg class="icon-icon">
-                        <use href="./images/icons_opt.svg#icon-twitter-1"></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon-link">
                       <svg class="icon-icon">
-                        <use href="./images/icons_opt.svg#icon-facebook-1"></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
                     <a href="" class="icon-link">
                       <svg class="icon-icon">
-                        <use href="./images/icons_opt.svg#icon-linkedin-1"></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -354,28 +354,28 @@
           <li>
             <a href="" class="icon-link">
               <svg class="icon-icon">
-                <use href="./images/icons_opt.svg#icon-instagram-2"></use>
+                <use href="./images/icons.svg#icon-instagram-2"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="" class="icon-link">
               <svg class="icon-icon">
-                <use href="./images/icons_opt.svg#icon-twitter-1"></use>
+                <use href="./images/icons.svg#icon-twitter-1"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="" class="icon-link">
               <svg class="icon-icon">
-                <use href="./images/icons_opt.svg#icon-facebook-1"></use>
+                <use href="./images/icons.svg#icon-facebook-1"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="" class="icon-link">
               <svg class="icon-icon">
-                <use href="./images/icons_opt.svg#icon-linkedin-1"></use>
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg>
             </a>
           </li>
