--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
           <h2 class="visually-hidden">About</h2>
           <ul class="section-two-list">
             <li class="section-two-list-item">
-              <svg class="icons" width="64" height="64">
+              <div class="icons">
+              <svg  width="64" height="64">
                 <use href="./images/icons.svg#icon-antenna-1">
                 </use>
               </svg>
+            </div>
               <h3 class="s-header-three">Strategy</h3>
               <p class="section-two-p">
                 Our goal is to identify the business problem to walk away with
@@ -69,10 +71,12 @@
               </p>
             </li>
             <li class="section-two-list-item">
-              <svg class="icons" width="64" height="64">
+              <div class="icons">
+              <svg width="64" height="64">
                 <use href="./images/icons.svg#icon-clock-1">
                 </use>
               </svg>
+              </div>
               <h3 class="s-header-three">Punctuality</h3>
               <p class="section-two-p">
                 Bring the key message to the brand's audience for the best price
@@ -80,10 +84,12 @@
               </p>
             </li>
             <li class="section-two-list-item">
-              <svg class="icons" width="64" height="64">
+              <div class="icons">
+              <svg  width="64" height="64">
                 <use href="./images/icons.svg#icon-Vector">
                 </use>
               </svg>
+              </div>
               <h3 class="s-header-three">Diligence</h3>
               <p class="section-two-p">
                 Research and confirm brands that present the strongest digital
@@ -91,10 +97,12 @@
               </p>
             </li>
             <li class="section-two-list-item">
-              <svg class="icons" width="64" height="64">
+            <div class="icons">
+              <svg width="64" height="64">
                 <use href="./images/icons.svg#icon-astronaut-1">
                 </use>
               </svg>
+            </div>
               <h3 class="s-header-three">Technologies</h3>
               <p class="section-two-p">
                 Design practice focused on digital experiences. We bring forth a
@@ -116,29 +124,35 @@
                 <p class="section-three-p">Product Designer</p>
                 <ul class="icon-list">
                   <li>
-                    <a href="" class="icon-link">
-                      <svg class="icon-icon">
+                  <div class="icon-link">
+                    <a href="">
+                      <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
+                  </div>
                   </li>
                   <li>
-                    <a href="" class="icon-link">
-                      <svg class="icon-icon">
+                    <div class="icon-link">
+                    <a href="">
+                      <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
+                    </div>
                   </li>
                   <li>
-                    <a href="" class="icon-link">
-                      <svg class="icon-icon">
+                    <div class="icon-link">
+                    <a href="">
+                      <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
+                    </div>
                   </li>
-                  <li>
-                    <a href="" class="icon-link">
-                      <svg class="icon-icon">
+                  <li><div class="icon-link">
+                    <a href="">
+                      <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -152,33 +166,37 @@
                 <h3 class="section-header-three">Tom Ford</h3>
                 <p class="section-three-p">Frontend Developer</p>
                 <ul class="icon-list">
-                  <li>
-                    <a href="" class="icon-link">
-                      <svg class="icon-icon">
+                  <li><div class="icon-link">
+                    <a href="">
+                      <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
+                    </div>
                   </li>
-                  <li>
-                    <a href="" class="icon-link">
+                  <li><div class="icon-link">
+                    <a href="" class="icon-link" >
                       <svg class="icon-icon">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
+                    </div>
                   </li>
-                  <li>
+                  <li><div class="icon-link">
                     <a href="" class="icon-link">
-                      <svg class="icon-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
+                    </div>
                   </li>
-                  <li>
+                  <li><div class="icon-link">
                     <a href="" class="icon-link">
-                      <svg class="icon-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
+                    </div>
                   </li>
                 </ul>
               </div>
@@ -190,29 +208,36 @@
                 <p class="section-three-p">Marketing</p>
                 <ul class="icon-list">
                   <li>
-                    <a href="" class="icon-link">
-                      <svg class="icon-icon">
+                    <div class="icon-link">
+                    <a href="">
+                      <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
+                    </div>
                   </li>
                   <li>
-                    <a href="" class="icon-link">
-                      <svg class="icon-icon">
+                    <div class="icon-link">
+                    <a href="">
+                      <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
+                    </div>
                   </li>
                   <li>
-                    <a href="" class="icon-link">
-                      <svg class="icon-icon">
+                    <div class="icon-link">
+                    <a href="" >
+                      <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
+                    </div>
                   </li>
                   <li>
-                    <a href="" class="icon-link">
-                      <svg class="icon-icon">
+                    <div class="icon-link">
+                    <a href="">
+                      <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -227,32 +252,37 @@
                 <p class="section-three-p">UI Designer</p>
                 <ul class="icon-list">
                   <li>
-                    <a href="" class="icon-link">
-                      <svg class="icon-icon">
+                    <div class="icon-link">
+                    <a href="">
+                      <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="icon-link">
-                      <svg class="icon-icon">
+                  <li><div class="icon-link">
+                    <a href="">
+                      <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
+                    </div>
                   </li>
                   <li>
-                    <a href="" class="icon-link">
-                      <svg class="icon-icon">
+                    <div class="icon-link">
+                    <a href="">
+                      <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
+                    </div>
                   </li>
-                  <li>
-                    <a href="" class="icon-link">
-                      <svg class="icon-icon">
+                  <li><div class="icon-link">
+                    <a href="">
+                      <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
+                    </div>
                   </li>
                 </ul>
               </div>
@@ -266,6 +296,15 @@
           <h2 class="section-four-title">Our Portfolio</h2>
           <ul class="s-four-list">
             <li class="s-four-list-item">
+              <div class="im-app"  >              
+                <p class="section-four-pp">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage </p>
+              </div>
+              <div class="portfolio-info">
+                <h3 class="section-four-h">Cashless Payment</h3>
+                <p class="section-four-p">Marketing</p>
+              </div>
+            </li>
+            <li class="s-four-list-item">
               <img
                 src="./images/bank.jpg"
                 width="360"
@@ -274,17 +313,6 @@
               <div class="portfolio-info">
                 <h3 class="section-four-h">Banking App</h3>
                 <p class="section-four-p">App</p>
-              </div>
-            </li>
-            <li class="s-four-list-item">
-              <img
-                src="./images/paym.jpg"
-                width="360"
-                height="300"
-                alt="Cashless Payment">
-              <div class="portfolio-info">
-                <h3 class="section-four-h">Cashless Payment</h3>
-                <p class="section-four-p">Marketing</p>
               </div>
             </li>
             <li class="s-four-list-item">
@@ -351,33 +379,40 @@
                Social media
         </p>
         <ul class="icon-list">
-          <li>
-            <a href="" class="icon-link">
-              <svg class="icon-icon">
+          <li><div class="icon-link">
+            <a href="">
+              <svg class="icon-icon" width="16px" height="16px">
                 <use href="./images/icons.svg#icon-instagram-2"></use>
               </svg>
             </a>
+            </div>
           </li>
           <li>
-            <a href="" class="icon-link">
-              <svg class="icon-icon">
+            <div class="icon-link">
+            <a href="">
+              <svg class="icon-icon" width="16px" height="16px">
                 <use href="./images/icons.svg#icon-twitter-1"></use>
               </svg>
             </a>
+            </div>
           </li>
           <li>
-            <a href="" class="icon-link">
-              <svg class="icon-icon">
+            <div class="icon-link">
+            <a href="">
+              <svg class="icon-icon" width="16px" height="16px">
                 <use href="./images/icons.svg#icon-facebook-1"></use>
               </svg>
             </a>
+            </div>
           </li>
           <li>
-            <a href="" class="icon-link">
-              <svg class="icon-icon">
+            <div class="icon-link">
+            <a href="">
+              <svg class="icon-icon" width="16px" height="16px">
                 <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg>
             </a>
+            </div>
           </li>
         </ul>
       </div>
