--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <ul class="icon-list">
                   <li>
                   <div class="icon-link">
-                    <a href="">
+                    <a href="" class="link-icon">
                       <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
@@ -134,7 +134,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                    <a href="">
+                    <a href="" class="link-icon">
                       <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
@@ -143,7 +143,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                    <a href="">
+                    <a href="" class="link-icon">
                       <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
@@ -151,7 +151,7 @@
                     </div>
                   </li>
                   <li><div class="icon-link">
-                    <a href="">
+                    <a href="" class="link-icon">
                       <svg class="icon-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
@@ -364,7 +364,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <a class="logo-footer"
           >Web<span class="logo-blu-footer">Studio</span></a
         >
