--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                 <h3 class="section-header-three">Mark Guerrero</h3>
                 <p class="section-three-p">Product Designer</p>
                 <ul class="icon-list">
-                  <li class="icon-link">
-                    <div>
-                      <a href="" class="link-icon">
+                  <li>
+                    <div class="icon-link">
+                      <a class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-instagram-2"></use>
                         </svg>
@@ -140,7 +140,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                      <a href="" class="link-icon">
+                      <a class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
@@ -149,7 +149,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                      <a href="" class="link-icon">
+                      <a class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
@@ -158,7 +158,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                      <a href="" class="link-icon">
+                      <a class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
