--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <ul class="icon-list">
                   <li>
                     <div class="icon-link">
-                      <a class="link-icon">
+                      <a href="" class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-instagram-2"></use>
                         </svg>
@@ -140,7 +140,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                      <a class="link-icon">
+                      <a href="" class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
@@ -149,7 +149,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                      <a class="link-icon">
+                      <a href="" class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
@@ -158,7 +158,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                      <a class="link-icon">
+                      <a href= "" class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
@@ -176,7 +176,7 @@
                 <ul class="icon-list">
                   <li>
                     <div class="icon-link">
-                      <a href="">
+                      <a href="" class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-instagram-2"></use>
                         </svg>
@@ -185,7 +185,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                      <a href="" class="icon-link">
+                      <a href="" class="link-icon">
                         <svg class="icon-icon">
                           <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
@@ -194,7 +194,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                      <a href="" class="icon-link">
+                      <a href="" class="link-icon"">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
@@ -203,7 +203,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                      <a href="" class="icon-link">
+                      <a href="" class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
@@ -221,7 +221,7 @@
                 <ul class="icon-list">
                   <li>
                     <div class="icon-link">
-                      <a href="">
+                      <a href="" class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-instagram-2"></use>
                         </svg>
@@ -230,7 +230,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                      <a href="">
+                      <a href="" class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
@@ -239,7 +239,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                      <a href="">
+                      <a href="" class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
@@ -248,7 +248,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                      <a href="">
+                      <a href="" class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
@@ -266,7 +266,7 @@
                 <ul class="icon-list">
                   <li>
                     <div class="icon-link">
-                      <a href="">
+                      <a href="" class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-instagram-2"></use>
                         </svg>
@@ -275,7 +275,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                      <a href="">
+                      <a href="" class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
@@ -284,7 +284,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                      <a href="">
+                      <a href="" class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
@@ -293,7 +293,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                      <a href="">
+                      <a href="" class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
