--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                      <a href= "" class="link-icon">
+                      <a href="" class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
@@ -186,7 +186,7 @@
                   <li>
                     <div class="icon-link">
                       <a href="" class="link-icon">
-                        <svg class="icon-icon">
+                        <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
                       </a>
@@ -194,7 +194,7 @@
                   </li>
                   <li>
                     <div class="icon-link">
-                      <a href="" class="link-icon"">
+                      <a href="" class="link-icon">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
