--- a/index.html
+++ b/index.html
@@ -129,36 +129,36 @@
                 <h3 class="section-header-three">Mark Guerrero</h3>
                 <p class="section-three-p">Product Designer</p>
                 <ul class="icon-list">
-                  <li>
-                    <div class="icon-link">
-                      <a href="" class="link-icon">
+                  <li class="icon-link">
+                    <div class="link-icon">
+                      <a href="">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-instagram-2"></use>
                         </svg>
                       </a>
                     </div>
                   </li>
-                  <li>
-                    <div class="icon-link">
-                      <a href="" class="link-icon">
+                  <li class="icon-link">
+                    <div class="link-icon">
+                      <a href="">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
                       </a>
                     </div>
                   </li>
-                  <li>
-                    <div class="icon-link">
-                      <a href="" class="link-icon">
+                  <li class="icon-link">
+                    <div class="link-icon">
+                      <a href="">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
                       </a>
                     </div>
                   </li>
-                  <li>
-                    <div class="icon-link">
-                      <a href="" class="link-icon">
+                  <li class="icon-link">
+                    <div class="link-icon">
+                      <a href="">
                         <svg class="icon-icon" width="16px" height="16px">
                           <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
