--- a/index.html
+++ b/index.html
@@ -397,48 +397,47 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-      </div>
-
-      <div class="social">
-        <p class="social-text">Social media</p>
-        <ul class="icon-list">
-          <li>
-            <div class="icon-link">
-              <a href="">
-                <svg class="icon-icon" width="16px" height="16px">
-                  <use href="./images/icons.svg#icon-instagram-2"></use>
-                </svg>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div class="icon-link">
-              <a href="">
-                <svg class="icon-icon" width="16px" height="16px">
-                  <use href="./images/icons.svg#icon-twitter-1"></use>
-                </svg>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div class="icon-link">
-              <a href="">
-                <svg class="icon-icon" width="16px" height="16px">
-                  <use href="./images/icons.svg#icon-facebook-1"></use>
-                </svg>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div class="icon-link">
-              <a href="">
-                <svg class="icon-icon" width="16px" height="16px">
-                  <use href="./images/icons.svg#icon-linkedin-1"></use>
-                </svg>
-              </a>
-            </div>
-          </li>
-        </ul>
+        <div class="social">
+          <p class="social-text">Social media</p>
+          <ul class="icon-list">
+            <li>
+              <div class="icon-link">
+                <a href="" class="link-icon">
+                  <svg class="icon-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="icon-link">
+                <a href="" class="link-icon">
+                  <svg class="icon-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="icon-link">
+                <a href="" class="link-icon">
+                  <svg class="icon-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="icon-link">
+                <a href="" class="link-icon">
+                  <svg class="icon-icon" width="16px" height="16px">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
