--- a/index.html
+++ b/index.html
@@ -130,40 +130,32 @@
                 <p class="section-three-p">Product Designer</p>
                 <ul class="icon-list">
                   <li class="icon-link">
-                    <div class="link-icon">
-                      <a href="">
-                        <svg class="icon-icon" width="16px" height="16px">
-                          <use href="./images/icons.svg#icon-instagram-2"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a href="" class="link-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="icon-link">
-                    <div class="link-icon">
-                      <a href="">
-                        <svg class="icon-icon" width="16px" height="16px">
-                          <use href="./images/icons.svg#icon-twitter-1"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a href="" class="link-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="icon-link">
-                    <div class="link-icon">
-                      <a href="">
-                        <svg class="icon-icon" width="16px" height="16px">
-                          <use href="./images/icons.svg#icon-facebook-1"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a href="" class="link-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="icon-link">
-                    <div class="link-icon">
-                      <a href="">
-                        <svg class="icon-icon" width="16px" height="16px">
-                          <use href="./images/icons.svg#icon-linkedin-1"></use>
-                        </svg>
-                      </a>
-                    </div>
+                    <a href="" class="link-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -174,41 +166,33 @@
                 <h3 class="section-header-three">Tom Ford</h3>
                 <p class="section-three-p">Frontend Developer</p>
                 <ul class="icon-list">
-                  <li>
-                    <div class="icon-link">
-                      <a href="" class="link-icon">
-                        <svg class="icon-icon" width="16px" height="16px">
-                          <use href="./images/icons.svg#icon-instagram-2"></use>
-                        </svg>
-                      </a>
-                    </div>
+                  <li class="icon-link">
+                    <a href="" class="link-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <div class="icon-link">
-                      <a href="" class="link-icon">
-                        <svg class="icon-icon" width="16px" height="16px">
-                          <use href="./images/icons.svg#icon-twitter-1"></use>
-                        </svg>
-                      </a>
-                    </div>
+                  <li class="icon-link">
+                    <a href="" class="link-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <div class="icon-link">
-                      <a href="" class="link-icon">
-                        <svg class="icon-icon" width="16px" height="16px">
-                          <use href="./images/icons.svg#icon-facebook-1"></use>
-                        </svg>
-                      </a>
-                    </div>
+                  <li class="icon-link">
+                    <a href="" class="link-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <div class="icon-link">
-                      <a href="" class="link-icon">
-                        <svg class="icon-icon" width="16px" height="16px">
-                          <use href="./images/icons.svg#icon-linkedin-1"></use>
-                        </svg>
-                      </a>
-                    </div>
+                  <li class="icon-link">
+                    <a href="" class="link-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -219,41 +203,33 @@
                 <h3 class="section-header-three">Camila Garcia</h3>
                 <p class="section-three-p">Marketing</p>
                 <ul class="icon-list">
-                  <li>
-                    <div class="icon-link">
-                      <a href="" class="link-icon">
-                        <svg class="icon-icon" width="16px" height="16px">
-                          <use href="./images/icons.svg#icon-instagram-2"></use>
-                        </svg>
-                      </a>
-                    </div>
+                  <li class="icon-link">
+                    <a href="" class="link-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <div class="icon-link">
-                      <a href="" class="link-icon">
-                        <svg class="icon-icon" width="16px" height="16px">
-                          <use href="./images/icons.svg#icon-twitter-1"></use>
-                        </svg>
-                      </a>
-                    </div>
+                  <li class="icon-link">
+                    <a href="" class="link-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <div class="icon-link">
-                      <a href="" class="link-icon">
-                        <svg class="icon-icon" width="16px" height="16px">
-                          <use href="./images/icons.svg#icon-facebook-1"></use>
-                        </svg>
-                      </a>
-                    </div>
+                  <li class="icon-link">
+                    <a href="" class="link-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <div class="icon-link">
-                      <a href="" class="link-icon">
-                        <svg class="icon-icon" width="16px" height="16px">
-                          <use href="./images/icons.svg#icon-linkedin-1"></use>
-                        </svg>
-                      </a>
-                    </div>
+                  <li class="icon-link">
+                    <a href="" class="link-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -264,41 +240,33 @@
                 <h3 class="section-header-three">Daniel Wilson</h3>
                 <p class="section-three-p">UI Designer</p>
                 <ul class="icon-list">
-                  <li>
-                    <div class="icon-link">
-                      <a href="" class="link-icon">
-                        <svg class="icon-icon" width="16px" height="16px">
-                          <use href="./images/icons.svg#icon-instagram-2"></use>
-                        </svg>
-                      </a>
-                    </div>
+                  <li class="icon-link">
+                    <a href="" class="link-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <div class="icon-link">
-                      <a href="" class="link-icon">
-                        <svg class="icon-icon" width="16px" height="16px">
-                          <use href="./images/icons.svg#icon-twitter-1"></use>
-                        </svg>
-                      </a>
-                    </div>
+                  <li class="icon-link">
+                    <a href="" class="link-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <div class="icon-link">
-                      <a href="" class="link-icon">
-                        <svg class="icon-icon" width="16px" height="16px">
-                          <use href="./images/icons.svg#icon-facebook-1"></use>
-                        </svg>
-                      </a>
-                    </div>
+                  <li class="icon-link">
+                    <a href="" class="link-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li>
-                    <div class="icon-link">
-                      <a href="" class="link-icon">
-                        <svg class="icon-icon" width="16px" height="16px">
-                          <use href="./images/icons.svg#icon-linkedin-1"></use>
-                        </svg>
-                      </a>
-                    </div>
+                  <li class="icon-link">
+                    <a href="" class="link-icon">
+                      <svg class="icon-icon" width="16px" height="16px">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
